--- a/src/assets/mixin.scss
+++ b/src/assets/mixin.scss
@@ -8,6 +8,8 @@
   transform: translate(0, -48%);
   background-color: var(--color-basic-neutral-10);
   overflow: scroll;
+  display: flex;
+  flex-direction: column;
   padding: var(--spacing-one-and-half) var(--spacing-one);
   box-sizing: border-box;
   box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2),
