--- a/src/shared/components/right-panel/right-panel.scss
+++ b/src/shared/components/right-panel/right-panel.scss
@@ -66,4 +66,10 @@
     font-weight: 200;
     flex: 1;
   }
+
+  &__empty-value {
+    @include m.open-sans;
+    font-weight: 200;
+    margin: var(--spacing-half) 0;
+  }
 }
