--- a/src/shared/components/right-panel/right-panel.module.scss
+++ b/src/shared/components/right-panel/right-panel.module.scss
@@ -39,6 +39,12 @@
     padding: var(--spacing-one) 0;
   }
 
+  &__properties {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-one);
+  }
+
   &__properties h4 {
     @include m.open-sans;
   }
@@ -46,19 +52,23 @@
   &__properties-list {
     display: grid;
     gap: var(--spacing-one);
-    padding: var(--spacing-one) 0;
   }
 
   &__properties-row {
     display: flex;
     align-items: flex-start;
     gap: var(--spacing-one);
+
+    span {
+      color: var(--color-basic-neutral-white);
+    }
   }
 
   &__properties-key {
     @include m.open-sans;
     font-weight: 200;
-    flex: 0.5;
+    flex: 0.7;
+    text-transform: capitalize;
   }
 
   &__properties-value {
