--- a/src/shared/components/left-panel/left-panel.module.scss
+++ b/src/shared/components/left-panel/left-panel.module.scss
@@ -1,12 +1,14 @@
-@use "@/assets/mixin" as m;
+@use '@/assets/mixin' as m;
 
 .left-panel {
   @include m.side-panel;
+
   overflow: hidden;
   left: var(--spacing-one);
 
   &__title {
     @include m.open-sans;
+
     margin-bottom: var(--spacing-one-and-half);
     color: var(--color-basic-neutral-white);
   }
