--- a/src/shared/components/right-panel/right-panel.module.scss
+++ b/src/shared/components/right-panel/right-panel.module.scss
@@ -1,7 +1,8 @@
-@use "@/assets/mixin" as m;
+@use '@/assets/mixin' as m;
 
 .right-panel {
   @include m.side-panel;
+
   overflow: hidden;
   right: var(--spacing-one);
 
@@ -66,6 +67,7 @@
 
   &__properties-key {
     @include m.open-sans;
+
     font-weight: 200;
     flex: 0.7;
     text-transform: capitalize;
@@ -73,12 +75,14 @@
 
   &__properties-value {
     @include m.open-sans;
+
     font-weight: 200;
     flex: 1;
   }
 
   &__empty-value {
     @include m.open-sans;
+
     font-weight: 200;
     margin: var(--spacing-half) 0;
   }
