--- a/src/assets/mixin.scss
+++ b/src/assets/mixin.scss
@@ -3,23 +3,24 @@
   top: 50%;
   height: 80vh;
   width: 380px;
-  z-index: 99999;
+  z-index: 999;
   border-radius: 8px;
   transform: translate(0, -48%);
   background-color: var(--color-basic-neutral-10);
   overflow: scroll;
+  display: flex;
+  flex-direction: column;
   padding: var(--spacing-one-and-half) var(--spacing-one);
   box-sizing: border-box;
-  box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2),
-    0px 3px 4px 0px rgba(0, 0, 0, 0.14), 0px 1px 8px 0px rgba(0, 0, 0, 0.12);
-  background-image: linear-gradient(
-    rgba(255, 255, 255, 0.082),
-    rgba(255, 255, 255, 0.082)
-  );
+  box-shadow:
+    0 3px 3px -2px rgb(0 0 0 / 20%),
+    0 3px 4px 0 rgb(0 0 0 / 14%),
+    0 1px 8px 0 rgb(0 0 0 / 12%);
+  background-image: linear-gradient(rgb(255 255 255 / 8.2%), rgb(255 255 255 / 8.2%));
 }
 
 @mixin open-sans($weight: 400, $color: var(--color-basic-neutral-white)) {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-weight: $weight;
   color: $color;
   letter-spacing: 0.4px;
