--- a/src/shared/components/right-panel/right-panel.module.scss
+++ b/src/shared/components/right-panel/right-panel.module.scss
@@ -21,6 +21,12 @@
     color: var(--color-basic-neutral-white);
   }
 
+  &__map {
+    width: 100%;
+    height: 280px;
+    margin-bottom: var(--spacing-two-and-half);
+  }
+
   &__body {
     display: flex;
     flex: 1;
@@ -29,61 +35,17 @@
     overflow: hidden auto;
   }
 
-  &__coordinates h4 {
-    @include m.open-sans;
-  }
-
-  &__coordinate-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: var(--spacing-half);
-    padding: var(--spacing-one) 0;
-  }
-
   &__properties {
     display: flex;
     flex-direction: column;
-    gap: var(--spacing-one);
+    gap: var(--spacing-half);
+
+    h4 {
+      margin-bottom: var(--spacing-half);
+    }
   }
 
   &__properties h4 {
     @include m.open-sans;
-  }
-
-  &__properties-list {
-    display: grid;
-    gap: var(--spacing-one);
-  }
-
-  &__properties-row {
-    display: flex;
-    align-items: flex-start;
-    gap: var(--spacing-one);
-
-    span {
-      color: var(--color-basic-neutral-white);
-    }
-  }
-
-  &__properties-key {
-    @include m.open-sans;
-
-    font-weight: 200;
-    flex: 0.7;
-    text-transform: capitalize;
-  }
-
-  &__properties-value {
-    @include m.open-sans;
-
-    font-weight: 200;
-    flex: 1;
-  }
-
-  &__empty-value {
-    @include m.open-sans;
-
-    font-weight: 200;
-    margin: var(--spacing-half) 0;
   }
 }
